--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/mysql": "^2.15.19",
+    "AsyncStorage": "^0.1.5",
     "body-parser": "^1.19.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
@@ -29,7 +30,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.4",
     "request": "^2.79.0"
   },
