--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.33",
     "mysql": "^2.18.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
